leptos_macro/tests/view/08_generic_prop_missing.stderr
error[E0277]: missing required prop `generic_fun` on component `Inner`
  --> tests/view/08_generic_prop_missing.rs:10:14
   |
10 |             <Inner concrete_i32=42>
   |              ^^^^^ missing prop `generic_fun`
   |
   = help: the trait `required_Inner_generic_fun` is not implemented for `Absent`
   = note: required props: [`concrete_i32`, `generic_fun`, `children`]
note: required by a bound in `__Inner::PropPresence::<(__F0, __F1, __F2)>::require_props`
  --> tests/view/08_generic_prop_missing.rs:17:1
   |
17 | #[component]
   | ^^^^^^^^^^^^ required by this bound in `PropPresence::<(__F0, __F1, __F2)>::require_props`
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `check_missing` exists for struct `__Inner::PropPresence<(Present, Absent, Present)>`, but its trait bounds were not satisfied
  --> tests/view/08_generic_prop_missing.rs:10:14
   |
10 |             <Inner concrete_i32=42>
   |              ^^^^^ method cannot be called on `__Inner::PropPresence<(Present, Absent, Present)>` due to unsatisfied trait bounds
...
17 | #[component]
   | ------------ method `check_missing` not found for this struct
   |
  ::: $WORKSPACE/leptos/src/component.rs
   |
   |     pub struct Absent;
   |     ----------------- doesn't satisfy `Absent: required_Inner_generic_fun`
   |
note: trait bound `Absent: required_Inner_generic_fun` was not satisfied
  --> tests/view/08_generic_prop_missing.rs:17:1
   |
17 | #[component]
   | ^^^^^^^^^^^^
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)
